@@ -37,6 +37,12 @@ several hundred machines without driving the sysadmins mad.</p>
 <h3>Recent News</h3>
 <ul>
 
+    <li><b>[04 Apr 2005] Current 1.7.1</b>
+    <p>Kick off a new development branch with Current 1.7.1.  The code
+    changes are mostly the beginnings of some ideas right now.  Most
+    notable is the changes in the cadmin tool.  Right now, only
+    the SQLite database is supported.</p></li>
+
     <li><b>[21 Mar 2005] Current 1.6.0 Final</b>
     <p>Its here!  Current 1.6.0 Final.  Only some documentation
     tweeks when compared to 1.5.91.  Y'all let me know how it
@@ -110,7 +116,14 @@ Jack's Current ftp repository is
 
 <h3>Dependancies</h3>
 
-<p>Current does require a few things to run.  Fortunately, any of the Red 
+<p><b>New for Current 1.7 - </b> Current versions 1.7 and up require
+mod_python 3.1 and Python 2.3.  It should be possible to get Current
+working with Python 2.2 (or 2.0?) if you install the <tt>logging</tt>
+module and the <tt>sets</tt> module.  Current should be able to run 
+out of the box on RHEL 4, RHEL 4 rebuilds, and FC2 or better.</p>
+
+<p><b>All Current Versions - </b> Current does require a few things to run.  
+Fortunately, any of the Red 
 Hat or Fedora Core distributions have everything you need to get Current
 working in some form or another.  The above distributions all include
 Python, mod_python, RPM, Apache, and a database Current knows how to use.
