@@ -3,6 +3,6 @@
 </head>
 
 <body>
-    Stable Version: Current 1.6.0
+    Stable Version: 1.6.0, Development Version: 1.7.1
 </body>
 </html>
